# Phoenix

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_external.sh  camera.cc  camera.h  common.cc  common.h  context.cc  context.h  cube.cc  cube.h  event_consumer.cc  event_consumer.h  file_utils.cc  file_utils.h  input.cc  input.h  main.cc  mesh_texture.cc  mesh_texture.h  phoenix_api.cc  phoenix_api.h  render_filter.h  render_utils.cc  render_utils.h  scene.cc  scene.h
resources/textures/: output.hdr
resourcesCMD/: geo_tool.sh  shader_tool.sh
resourcesCMD/shaders/: fs_brdf.sc  fs_cubes.sc  fs_irradiance_convolution.sc  fs_orb.sc  fs_radiance_prefilter.sc  fs_sphere_texture.sc  vs_cubes.sc  vs_plane.sc  vs_sphere_texture.sc
